--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tanstack/react-table": "^8.21.2",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
