--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
     "@tanstack/react-table": "^8.21.2",
+    "@vercel/analytics": "^1.5.0",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.1",
